# youtube_airflow_data_collector

./: .gitignore  README.md
YoutubeDataCollector/: Dockerfile  docker-compose.yaml  pyproject.toml
YoutubeDataCollector/database_scripts/: get_video_by_channel_subscribers_amount.sql  get_video_by_duration.sql  get_video_by_search_query.sql  get_video_by_upload_date.sql  get_videos_by_channel_name.sql
YoutubeDataCollector/src/dags/: youtube_power_bi_query_dag.py
YoutubeDataCollector/src/helpers/: constants.py  helpers.py  models.py
YoutubeDataCollector/src/init-scripts/: init.sql
