[tool.poetry]
name = "statcollector"
version = "0.1.0"
description = ""
authors = ["EugeneVojtik <evgeniyvojtik@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
google-api-python-client = "^2.99.0"
isodate = "^0.6.1"
psycopg2-binary = "^2.9.7"
sqlalchemy = "^2.0.20"
pandas = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
